Setting up models for range objects.